# mix-mall-backend

./: .env_default  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
nginx/conf.d/: default.conf
src/: amis_field.py  app.py  main.py  pyproject.toml
src/fast_store_backend/: admin.py  amis.py  common.py  dantic_model.py  depends.py  models.py  pages.py  responses.py  schemas.py  settings.py  utils.py
src/fast_store_backend/router/: __init__.py  cart.py  customer.py  goods.py  index.py  pay.py  product.py  user.py
