[tool.poetry]
name = "fast-store-backend"
version = "0.1.0"
description = ""
authors = ["Chise1 <chise123@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fast-tmp = { git = "https://github.com/Chise1/fast-tmp.git", branch = "main" }
Jinja2 = "^3.1.2"
aiofiles = "^22.1.0"
uvicorn = "^0.19.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
url = "https://mirrors.aliyun.com/pypi/simple/"
name = "aliyun"
default = true
