[tool.poetry]
name = "fast-store-backend"
version = "0.1.0"
description = ""
authors = ["Chise1 <chise123@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.2"
aiofiles = "^22.1.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
typer = "^0.7.0"
fastapi = {extras = ["all"], version = "^0.88.0"}
python-jose = "^3.3.0"
asgiref = "^3.5.2"
tortoise-orm = "^0.19.2"
python-multipart = "^0.0.5"
aiohttp = "^3.8.3"
fast-tmp = "^1.1.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


#[[tool.poetry.source]]
#url = "https://mirrors.aliyun.com/pypi/simple/"
#name = "aliyun"
#default = true
